202211042231: Recurring transactions until cancelled.
202211042311: Added Refund and Employment type. Removed Income type.
202211050020: Write balance to a daily JSON.
202211052307: Subtract refunds and discounts from Group totals.
202211102016: Fixed date and time for consecutive transactions.
202211102017: Disable parallel dashboard launch.
202211241450: Added separate subroutine for writePath check. Fails when attached to location subroutine
202212121207: Fixed bug in disappearing connections.
202304032220: Testing new type lists for transactions screen
202304041459: Write transactionsLists to folder
202304041503: Removing .json from list keys
202304042221: Delete trsansactionsList before creating a new list
202304042250: Minify the html and remove some double quotes in the header
202304042257: Removed \n and \t from typelists
202304042334: The space before xmlEncode!!!
202304042337: Surround variable with quotation marks
202304050941: Removed ;xmlEncode from variables in transaction screen
202304052208: Added disabled line separator to typeLists
202304052211: Escaped single quotes inside html variables
202304052221: Removed distinct function in typeLists as it filters multiple disabled items
202304052224: Testing img src to icons in storage
202304052234: Testing using fileUri for displaying images
202304052237: Using content:/// for image src
202304061057: Added sha check for transaction lists
202304101652: Refactored transaction flows
202304101654: Initial version
202304101658: Initial version
202304101707: Updated API key for exchange rate
202304101854: Exclude emoticons in transactions list values
202304102042: Create arrays for typelists with unicode
202304102222: Added autofill location and auto complete subcategory
202304102311: Removed old location input, hidden extra fields, increased size of currency and quantity inputs
202304102338: Removed state as a location field
202304102349: Fixes for screen alignment
202304111043: Testing DOM storage for screens