@@ -1,1 +1,1 @@
-{"name":"transactions","blurb":"Flow to run financial transactions.","version":"202304111043","configPath":"/storage/emulated/0/Process/automate/4a Transactions/","writePath":"/storage/emulated/0/Data/finances/transactions/sessions/","primaryFile":"/storage/emulated/0/Data/finances/transactions/primary.json","typeFolder":"/storage/emulated/0/Process/automate/4a Transactions/typelists/","recurringTransactions":"/storage/emulated/0/Data/finances/transactions/recurring.json","comment":"Testing DOM storage for screens","uri":"content://com.llamalab.automate.provider/flows/22/data"}
+{"name":"transactions","blurb":"Flow to run financial transactions.","version":"202304111636","configPath":"/storage/emulated/0/Process/automate/4a Transactions/","writePath":"/storage/emulated/0/Data/finances/transactions/sessions/","primaryFile":"/storage/emulated/0/Data/finances/transactions/primary.json","typeFolder":"/storage/emulated/0/Process/automate/4a Transactions/typelists/","recurringTransactions":"/storage/emulated/0/Data/finances/transactions/recurring.json","comment":"Added validation step","uri":"content://com.llamalab.automate.provider/flows/22/data"}
