@@ -1,0 +1,6 @@
+[
+        {
+                "logic": "transaction["currency"] = "ZAR" && transaction["accountFrom"] != "FNB Cheque"",
+                "message": "FNB is a rand-denominated account.."
+        }
+]
