@@ -53,3 +53,4 @@
 202304102338: Removed state as a location field
 202304102349: Fixes for screen alignment
 202304111043: Testing DOM storage for screens
+202304111636: Added validation step
